{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 69,
  "lineage": "c1a4013c-6078-414c-3c4c-8f51b77b253d",
  "resources": [
    {
      "module": "module.vpc_tf",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e5df0cf5946b2a4",
            "arn": "arn:aws:ec2:us-east-1:113219609078:instance/i-0fe04e3729c33e27d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe04e3729c33e27d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fd8c3ba0071be3ce",
            "private_dns": "ip-10-20-0-105.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.0.105",
            "public_ip": "54.242.72.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0e6f89159c3493f4b",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04bb335d2f1149c84",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01aab8881cedaa52f"
            ]
          },
          "dependencies": [
            "module.vpc_tf.aws_subnet.main",
            "module.vpc_tf.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tf",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113219609078:internet-gateway/igw-08cd13a3fb5d78156",
            "id": "igw-08cd13a3fb5d78156",
            "owner_id": "113219609078",
            "vpc_id": "vpc-017eca8bb7c036c02"
          },
          "dependencies": [
            "module.vpc_tf.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tf",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113219609078:route-table/rtb-09c5ff2c781146dcc",
            "id": "rtb-09c5ff2c781146dcc",
            "owner_id": "113219609078",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-017eca8bb7c036c02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_tf.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tf",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113219609078:route-table/rtb-05ecda95e05511423",
            "id": "rtb-05ecda95e05511423",
            "owner_id": "113219609078",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08cd13a3fb5d78156",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-017eca8bb7c036c02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_tf.aws_internet_gateway.main",
            "module.vpc_tf.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tf",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rpri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01000a96a32263f06",
            "route_table_id": "rtb-09c5ff2c781146dcc",
            "subnet_id": "subnet-0ad52ce8f9f335d7a"
          },
          "dependencies": [
            "module.vpc_tf.aws_route_table.pri",
            "module.vpc_tf.aws_subnet.main1",
            "module.vpc_tf.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a86387c9d814cf72",
            "route_table_id": "rtb-09c5ff2c781146dcc",
            "subnet_id": "subnet-0b294a2a75a2cbf67"
          },
          "dependencies": [
            "module.vpc_tf.aws_route_table.pri",
            "module.vpc_tf.aws_subnet.main1",
            "module.vpc_tf.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0853880ab90d31b9a",
            "route_table_id": "rtb-09c5ff2c781146dcc",
            "subnet_id": "subnet-042f349fd0c3f4584"
          },
          "dependencies": [
            "module.vpc_tf.aws_route_table.pri",
            "module.vpc_tf.aws_subnet.main1",
            "module.vpc_tf.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tf",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0868dff9f3d757240",
            "route_table_id": "rtb-05ecda95e05511423",
            "subnet_id": "subnet-04bb335d2f1149c84"
          },
          "dependencies": [
            "module.vpc_tf.aws_internet_gateway.main",
            "module.vpc_tf.aws_route_table.pub",
            "module.vpc_tf.aws_subnet.main",
            "module.vpc_tf.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fdc31d086d70375",
            "route_table_id": "rtb-05ecda95e05511423",
            "subnet_id": "subnet-088b0e78b68057965"
          },
          "dependencies": [
            "module.vpc_tf.aws_internet_gateway.main",
            "module.vpc_tf.aws_route_table.pub",
            "module.vpc_tf.aws_subnet.main",
            "module.vpc_tf.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00781150b8dfdb7f0",
            "route_table_id": "rtb-05ecda95e05511423",
            "subnet_id": "subnet-05fdf8f3e24e274f9"
          },
          "dependencies": [
            "module.vpc_tf.aws_internet_gateway.main",
            "module.vpc_tf.aws_route_table.pub",
            "module.vpc_tf.aws_subnet.main",
            "module.vpc_tf.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tf",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113219609078:subnet/subnet-04bb335d2f1149c84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bb335d2f1149c84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "113219609078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-017eca8bb7c036c02"
          },
          "dependencies": [
            "module.vpc_tf.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113219609078:subnet/subnet-088b0e78b68057965",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088b0e78b68057965",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "113219609078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-017eca8bb7c036c02"
          },
          "dependencies": [
            "module.vpc_tf.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113219609078:subnet/subnet-05fdf8f3e24e274f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fdf8f3e24e274f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "113219609078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-017eca8bb7c036c02"
          },
          "dependencies": [
            "module.vpc_tf.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tf",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113219609078:subnet/subnet-0ad52ce8f9f335d7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad52ce8f9f335d7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "113219609078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-017eca8bb7c036c02"
          },
          "dependencies": [
            "module.vpc_tf.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113219609078:subnet/subnet-0b294a2a75a2cbf67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b294a2a75a2cbf67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "113219609078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-017eca8bb7c036c02"
          },
          "dependencies": [
            "module.vpc_tf.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113219609078:subnet/subnet-042f349fd0c3f4584",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042f349fd0c3f4584",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "113219609078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-017eca8bb7c036c02"
          },
          "dependencies": [
            "module.vpc_tf.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tf",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113219609078:vpc/vpc-017eca8bb7c036c02",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-03e2f29186c7ad32f",
            "default_route_table_id": "rtb-0cc3303493d97f96f",
            "default_security_group_id": "sg-01aab8881cedaa52f",
            "dhcp_options_id": "dopt-0f8448aab18287501",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-017eca8bb7c036c02",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cc3303493d97f96f",
            "owner_id": "113219609078",
            "tags": {
              "Name": "Tag test",
              "location": "chittoor"
            },
            "tags_all": {
              "Name": "Tag test",
              "location": "chittoor"
            }
          }
        }
      ]
    }
  ]
}